--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
 </head>
 
 <body>
-  
+  <div id="counter-display">
+  </div>
+  <button id="counter-increment"> + </button>
+  <button id="counter-decrement"> - </button>
+
   <script src="bundle.js"></script>
 </body>
 
