--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <button id="counter-increment"> + </button>
   <button id="counter-decrement"> - </button>
 
-  <script src="bundle.js"></script>
+  <script src="bundle.min.js"></script>
 </body>
 
 </html>
